--- a/src/app/pages/register/components/register-container/register-container.component.css
+++ b/src/app/pages/register/components/register-container/register-container.component.css
@@ -3,7 +3,7 @@
   width: 1000px;
   height: 500px;
   background-color:#FFFF;
-  border-radius: 5%;
+  border-radius: 15px;
   display: flex;
   align-items: center;
 
