alter selectors categories

--- a/src/app/pages/register/components/form-register/form-register.component.html
+++ b/src/app/pages/register/components/form-register/form-register.component.html
@@ -91,12 +91,12 @@
           <label for="economia-category"> Economia</label>
         </div>
         <div class="checkbox-custom">
-          <input type="checkbox" name="" id="educação" formControlName="educacao">
-          <label for="educação"> Educação</label>
+          <input type="checkbox" name="" id="educacao-category" formControlName="educacao">
+          <label for="educacao-category"> Educação</label>
         </div>
         <div class="checkbox-custom">
           <input type="checkbox" name="" id="loterias-category" formControlName="loterias">
-          <label for="loterias-category"> Educação</label>
+          <label for="loterias-category"> Loterias</label>
         </div>
         <div class="checkbox-custom">
           <input type="checkbox" name="" id="mundo-category" formControlName="mundo">
